# ghpsdr3-alex

./: .anjuta_sym_db.db  .gitignore  CMakeLists.txt  Makefile.am  README  alex-avx-conf.sh  alex-conf.sh  alex-corei7-avx.sh  alex-openmp-avx-conf.sh  alex-openmp-sse3-conf.sh  alex-sse3-conf.sh  cert  cert.req  cleanup.sh  configure-alex.sh  configure.ac  do_dspserver  do_server  ghpsdr3-alex-opengl-ssl-lgfft.anjuta  ghpsdr3-alex.files  ghpsdr3-alex.includes  ghpsdr3-alex.pro  ghpsdr3_mgr.conf  libtool  pkey  qtserv  qtstart  qtstop  set_Qt-4.8-0_path.src  set_Qt-4.8-1_path.src  set_Qt-5.0.0_path.src  set_Qt-5.0.2_path.src  set_Qt-5.1.0_path.src  set_Qt-5.3_path.src  set_Qt-5.6_path.src  set_Qt5_path.src
.anjuta/session/: anjuta.session  dock-layout.xml
branches/android/aHPSDR/: .project  AndroidManifest.xml
branches/android/glSDR/: AndroidManifest.xml  build.gradle  import-summary.txt  local.properties  (+3 more)
build-aux/: ax_ext.m4
debian/: README.Debian  README.source  changelog  control  copyright
trunk/src/: w3sztext
trunk/src/DttSP/: CMakeLists.txt  DttSP.files  DttSP.includes  FFT_Kernels.cl  Makefile.am  amd.c  amd.h  anf.c  anf.h  anr.c  anr.h  banal.c  banal.h  cleanup.sh  common.h  compress.c  compress.h  correctIQ.c  correctIQ.h  cwtones.c  cwtones.h  defs.h  diversity.c  fft.cl  fft_1024.cl  fft_2048.cl  fft_4096.cl  fft_512.cl  fftcl.c  fftcl.h  filt2p2z.c  filt2p2z.h  filter.c  filterbank.c  filterbank.h  fm_demod.c  fm_demod.h  fromsys.h  iambic-keyer-for-SR.c  keyboard-keyer-for-SR.c  (+18 more)
trunk/src/QtRadio/: AMFilters.cpp  About.cpp  About.h  About.ui  Audio.cpp  Audio.h  Audioinput.cpp  Audioinput.h  Band.cpp  Band.h  BandStackEntry.cpp  BandStackEntry.h  Bandscope.h  Basic.fsh  Basic.vsh  BookmarkDialog.h  Bookmarks.cpp  Bookmarks.h  BookmarksDialog.h  BookmarksEditDialog.h  CMakeLists.txt  CWLFilters.cpp  CWUFilters.cpp  Configure.cpp  Configure.h  Configure.ui  Connection.cpp  Connection.h  DIGLFilters.cpp  DIGUFilters.cpp  DSBFilters.cpp  EqualizerDialog.cpp  EqualizerDialog.h  EqualizerDialog.ui  FMNFilters.cpp  Filters.cpp  Filters.h  FiltersBase.h  Frequency.cpp  G711A.cpp  (+78 more)
trunk/src/QtRadio/build-aux/: autotroll.m4
trunk/src/backend/: Makefile.am  README  configure.ac  examples.sh  radio-backend
trunk/src/dspserver/: .anjuta_sym_db.db  CMakeLists.txt  G711A.c  G711A.h  Makefile.am  README  audiostream.c  audiostream.h  buffer.h  cert  cert.req  client.c  client.h  codec2loc.h  dspserver.files  dspserver.includes  dttsp.h  fromsys.h  main.c  main.h  ozy.c  ozy.h  pkey  register.c  register.h  rtp.c  rtp.h  soundcard.c  soundcard.h  util.c  util.h  version.h
trunk/src/dspserver/.anjuta/: default.profile
trunk/src/dspserver/.anjuta/session/: anjuta.session  dock-layout.xml
trunk/src/hiqsdr/: Makefile.am  README  README_GJ  cleanup.sh  client.cpp  client.h  hiqsdr.cpp  hiqsdr.h  listener.cpp  receiver.cpp  receiver.h  server.cpp
trunk/src/perseus/: Makefile.am  cleanup.sh  client.cpp  configure.ac  libtool  perseus_server  receiver.cpp  receiver.h  server.cpp  util.cpp  util.h
trunk/src/pylauncher/: Makefile  Makefile.am  Makefile.in  cleanup.sh  ghpsdr3-mgr.py  ghpsdr3_mgr.conf  ghpsdr3launcher.desktop.in
trunk/src/receiver/: Makefile.am  Makefile.orig  configure.ac  spectrum.c  spectrum_buffers.h  spectrum_update.h
trunk/src/rtlsdr/: AUTHORS  Makefile.am  README  cleanup.sh  client.cpp  configure.ac  libtool  receiver.cpp  receiver.h  rtlsdr-server  server.cpp
trunk/src/sdr1000/: Makefile.am  sdr1000.files  sdr1000.includes
trunk/src/sdr1000/server/: client.c  client.h  listener.c  receiver.c  receiver.h  sdr1000.c  sdr1000.h  sdr1000io.c  sdr1000io.h  server.cpp  server.h
trunk/src/sdr1000/src/common/: common.h
trunk/src/sdr1000/src/linux/: hw_sdr1000.cpp  hw_sdr1000.h
trunk/src/sdr1000/src/linux/usb/: sdr1kusb.h
trunk/src/sdr1000/test/src/linux/: hw_sdr1000.cpp  hw_sdr1000.h
trunk/src/sdriq/: Makefile.am  README  cleanup.sh  client.c  receiver.c  receiver.h  sdriq.c  sdriq.h  server.c
trunk/src/sdrplay/: AUTHORS  Makefile.am  Notes.org  README  cleanup.sh  client.cpp  configure.ac  receiver.cpp  receiver.h  server.cpp
trunk/src/server/: Makefile.am  README  bandscope.c  bandscope.h  client.c  client.h  hpsdr-server.files  hpsdr-server.includes  listener.c  listener.h  metis.c  metis.h  ozy.c  ozy.h  ozyio.c  ozyio.h  receiver.c  receiver.h  server.c  transmitter.c  util.c  util.h
trunk/src/server/windows/: usb.h
trunk/src/softrock/: CMakeLists.txt  Makefile.am  cleanup.sh  client.c  client.h  config_ops.c  globals.h  jackio.c  jackio.h  listener.c  listener.h  operations.c  receiver.c  receiver.h  server.c  softrock.c  softrock.h  softrockio.c  softrockio.h
trunk/src/tkradio/: Makefile.am  Notes  README  configure.ac  mytkradio  rtlsdr-backend  sdrplay-backend  softrock-backend  test-dialbook  tkradio  todo.org
trunk/src/tkradio/sdr/: Makefile.am  audio.tcl  band-data.tcl  channel.tcl  clabelframe.tcl  cleanup.sh  command.tcl  configure.ac  connect.tcl  defaults.tcl  dial.tcl  dialbook.tcl  dspserver.tcl  filter.tcl  frequency-display.tcl  hardware-sdrplay-ui.tcl  hardware-sdrplay.tcl  hotiron.tcl  memory.tcl  meter.tcl  optionmenu.tcl  pa_simple.c  pkgIndex.tcl  radio-afedri.tcl  radio-hiqsdr.tcl  radio-model.tcl  radio-sdrplay.tcl  radio-ui-one.tcl  radio.tcl  sdrtype.tcl  server.tcl  servers.tcl  spectrum-waterfall.tcl  spectrum.tcl  theme-alt.tcl  theme-night.tcl  ui-con-radio.tcl  ui-one.tcl  ui-pw-radio-sdrplay.tcl  ui-pw-radio.tcl  (+3 more)
trunk/src/usrp/: AUTHORS  Makefile.am  Makefile.orig  README  bandscope.c  bandscope.h  buffer.h  cleanup.sh  client.c  client.h  configure.ac  libtool  listener.c  messages.h  receiver.c  receiver.h  resampler.c  resampler.h  server.c  transmitter.c  transmitter.h  usrp.c  usrp.h  usrp_audio.c  usrp_audio.h  usrp_server  util.c  util.h
trunk/src/widget-server/: CMakeLists.txt  Makefile.am  OzyInit.c  bandscope.c  cleanup.sh  client.c  client.h  config_ops.c  listener.c  metis.c  operations.c  ozy.c  ozy.h  ozyio.c  ozyio.h  receiver.c  receiver.h  server.c  server.c.orig
(+163 files in other folders)
