ACLOCAL_AMFLAGS=-I build-aux

SUBDIRS = trunk/src/softrock trunk/src/DttSP trunk/src/dspserver  \
          trunk/src/widget-server trunk/src/server trunk/bin      \
          trunk/src/pylauncher trunk/src/hiqsdr trunk/src/sdriq   \
          trunk/src/sdr1000                                       \
          @MAKE_QTRADIO@                                          \
          @MAKE_PERSEUS@ @MAKE_USRP@ @MAKE_RTLSDR@



